# scraper-store-reviews

./: .gitignore  README.md  main.py  pyproject.toml
