[project]
name = "scraper-store-reviews"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <3.13"
dependencies = [
    "apple-store-scraper>=0.3.6",
    "google-play-scraper>=1.2.7",
    "gspread>=6.1.4",
    "oauth2client>=4.1.3",
    "pandas>=2.2.3",
]

